--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,5 +1,6 @@
 .home-container {
   margin-top: var(--margin-bottom);
+  overflow: hidden;
 }
 .hero {
   height: auto;
@@ -50,6 +51,10 @@
   background-color: var(--dark-blue);
   border: none;
   outline: none;
+}
+
+.btn-about:hover {
+  background-color: var(--green);
 }
 
 .btn-me {
