--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -26,10 +26,12 @@
 .form-control {
   display: flex;
   flex-direction: column;
+  margin-bottom: 24px;
 }
 .form-control label {
   margin-bottom: 8px;
 }
+
 .form-control input,
 .form-control textarea {
   width: 100%;
@@ -42,8 +44,18 @@
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0px;
-  margin-bottom: 24px;
 }
+
+.errorClass input,
+.errorClass textarea {
+  border: 2px solid var(--red);
+}
+
+.good input,
+.good textarea {
+  border: 2px solid var(--green);
+}
+
 textarea {
   padding-bottom: 57px !important;
 }
@@ -54,6 +66,15 @@ textarea {
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
+}
+.form-control span {
+  margin-top: 4px;
+  font-family: "Public Sans", sans-serif;
+  font-size: 10px;
+  font-style: italic;
+  font-weight: 700;
+  line-height: 12px;
+  color: var(--red);
 }
 .dark {
   background-color: #203a4c;
