--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -55,6 +55,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     transition: 0.3s ease-in-out;
+    width: 100%;
   }
 
   .showNavs {
