--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -15,6 +15,17 @@
   align-items: center;
 }
 
+.foot {
+  display: flex;
+  flex-direction: column;
+}
+
+.copy {
+  color: var(--very-light-grey);
+  text-align: center;
+  margin-bottom: 5px;
+}
+
 .footer-container-links {
   width: 308px;
   display: flex;
