--- a/src/Pages/PortFolio/PortFolio.css
+++ b/src/Pages/PortFolio/PortFolio.css
@@ -1,5 +1,6 @@
 .portfolio {
   margin-top: var(--margin-bottom);
+  font-family: "Public Sans", sans-serif !important;
 }
 .flex {
   display: flex;
@@ -24,12 +25,107 @@
 
 .language select {
   margin-top: 0.5rem;
-  background-color: var(--dark-blue);
+  background-color: var(--light-grey);
   width: 200px;
+  border: transparent;
   padding: 10px 0;
-  color: var(--very-light-grey);
+  color: var(--dark-blue);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+  border-radius: 5px;
+  outline: none;
+  letter-spacing: 2px;
 }
 
 .language select option {
   padding: 10px;
+}
+
+.icon {
+  color: #2680c0;
+}
+
+.portContainer {
+  display: grid;
+  width: 100%;
+  grid-gap: 3rem 1.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 150px;
+}
+
+.portCon {
+  transition: var(--transition);
+  box-shadow: 0 5px 15px rgb(0 0 0 / 10%);
+  width: 100%;
+  text-align: center;
+}
+
+.infoCon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 1rem;
+  height: 180px;
+}
+
+.infoCon h3 {
+  font-weight: 200 !important;
+}
+.imgCon {
+  height: 300px;
+  width: 100%;
+}
+.langCon {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.langCon p {
+  background: #dae2ec;
+  padding: 0.15rem 0.35rem;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 2px;
+  display: block;
+  margin: 0.25rem 0.25rem 0;
+}
+
+.portCon:hover {
+  transition: var(--transition);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  transform: scale(1.02);
+  grid-template-columns: 1fr;
+}
+
+.portFooter {
+  background-color: #daedfb;
+  width: 100%;
+}
+
+.portFooter {
+  color: #2680c0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.detail {
+  text-transform: uppercase;
+  color: var(--clr-primary);
+  transition: var(--transition);
+  display: inline-block;
+  padding: 0.25rem 0;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 900px) {
+  .portContainer {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 600px) {
+  .portContainer {
+    grid-template-columns: 1fr;
+  }
 }
