--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -6,12 +6,19 @@ header {
   background-color: var(--very-light-grey);
 }
 
-nav {
+.nav {
   display: flex;
   justify-content: space-between;
   padding: 65px 0 54px 0;
   position: relative;
+  transition: var(--transition);
 }
+
+.small {
+  padding: 30px 0 !important;
+  transition: var(--transition);
+}
+
 .logoContainer {
   width: 60.08px;
   height: 32px;
@@ -38,7 +45,7 @@ nav {
 
 @media screen and (max-width: 600px) {
   nav {
-    padding: 32px 0 40px 0;
+    padding: 32px 0 40px 0 !important;
   }
   .harmburger {
     display: block;
