--- a/src/Pages/PortFolio/PortFolio.css
+++ b/src/Pages/PortFolio/PortFolio.css
@@ -50,6 +50,7 @@
   grid-gap: 3rem 1.5rem;
   grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 150px;
+  overflow: hidden;
 }
 
 .portCon {
@@ -87,7 +88,7 @@
   font-size: 0.75rem;
   letter-spacing: 2px;
   display: block;
-  margin: 0.25rem 0.25rem 0;
+  margin: 0.2rem 0.2rem 0;
 }
 
 .portCon:hover {
