--- a/src/Pages/PortFolio/PortFolio.css
+++ b/src/Pages/PortFolio/PortFolio.css
@@ -65,12 +65,24 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 1rem;
-  height: 180px;
+  height: 200px;
 }
 
 .infoCon h3 {
   font-weight: 200 !important;
 }
+
+.infoCon p {
+  padding-inline: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .imgCon {
   height: 300px;
   width: 100%;
